# animeta-nexus

./: .env.example  .gitignore  LICENSE  METADATA_NEXUS_MANIFESTO.md  OPERATING_ROADMAP.md  README.md  index.html  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
animeta_nexus/: __init__.py  cli.py  metadata_command_center.py  metadata_reconstruction_core.py  operational_metadata_ledger.py  runtime_environment.py  tvdb_contribution_rail.py
demo/: command_center_report.json  reconstruction_core_output.json  source_signal_corpus.json
docs/: METADATA_NEXUS_MANIFESTO.md  OPERATING_ROADMAP.md  PRESENTATION_DOCTRINE.md
scripts/: generate_metadata_command_center.py
