[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animeta-nexus"
version = "0.1.0"
description = "TVDB-powered metadata intelligence and reconstruction workflow for anime libraries."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "queukat", email = "75810528+queukat@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["tvdb", "anime", "metadata", "localization", "media-library"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "backoff>=2.2",
  "httpx>=0.27",
  "loguru>=0.7",
  "openai>=1.0",
  "playwright>=1.40",
  "regex>=2024.0",
]

[project.urls]
Homepage = "https://github.com/queukat/animeta-nexus"
Command-Center = "https://queukat.github.io/animeta-nexus/"
Repository = "https://github.com/queukat/animeta-nexus"

[project.scripts]
animeta = "animeta_nexus.cli:main"

[tool.setuptools]
packages = ["animeta_nexus"]
